k8s/prod-api-external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: prod-api-service
  namespace: default
spec:
  type: ExternalName
  externalName: api-service.prod.svc.cluster.local
