k8s/stage-api-external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: stage-api-service
  namespace: default
spec:
  type: ExternalName
  externalName: api-service.stage.svc.cluster.local
